--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-idle-timer": "^4.6.4",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
