--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.4.5",
     "axios": "^1.3.6",
+    "bootstrap": "^5.2.3",
     "material-ui": "^1.0.0-beta.47",
+    "mdb-react-ui-kit": "^6.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
@@ -42,5 +44,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.7"
   }
 }
